// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Polkadot People > adding a registrar as root from the relay chain works > call add registrar with wrong origin 1`] = `
[
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 1000)",
          "refTime": "(rounded 300000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchInfo": {
        "class": "Mandatory",
        "paysFee": "No",
        "weight": {
          "proofSize": 0,
          "refTime": "(rounded 100000000)",
        },
      },
    },
    "method": "ExtrinsicSuccess",
    "section": "system",
  },
  {
    "data": {
      "dispatchError": "BadOrigin",
      "dispatchInfo": {
        "class": "Normal",
        "paysFee": "Yes",
        "weight": {
          "proofSize": "(rounded 10000)",
          "refTime": "(rounded 1000000000)",
        },
      },
    },
    "method": "ExtrinsicFailed",
    "section": "system",
  },
]
`;

exports[`Polkadot People > adding a registrar as root from the relay chain works > registrars after parachain block 1`] = `
[
  {
    "account": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    "fee": 1,
    "fields": 0,
  },
  {
    "account": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "fee": 0,
    "fields": 0,
  },
  {
    "account": "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
    "fee": 0,
    "fields": 0,
  },
]
`;

exports[`Polkadot People > adding a registrar as root from the relay chain works > registrars after relay block 1`] = `
[
  {
    "account": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    "fee": 1,
    "fields": 0,
  },
  {
    "account": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "fee": 0,
    "fields": 0,
  },
]
`;

exports[`Polkadot People > adding a registrar as root from the relay chain works > registrars before relay block 1`] = `
[
  {
    "account": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    "fee": 1,
    "fields": 0,
  },
  {
    "account": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "fee": 0,
    "fields": 0,
  },
]
`;

exports[`Polkadot People > setting an on-chain identity, requesting 2 judgements, having 1 provided, and then resetting the identity should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "16D2eVuK5SWfwvtFD3gVdBC2nc2BafK31BY6PrbZHBAGew7L",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity and requesting judgement should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > alice's two subidentities 1`] = `
[
  4010600000,
  [
    "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
  ],
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > bob's superaccount data 1`] = `
[
  "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
  {
    "raw": "0x626f62",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > carolus' superaccount data 1`] = `
[
  "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
  {
    "raw": "0x6361726f6c7573",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > charlie's superaccount data 1`] = `
[
  "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
  {
    "raw": "0x636861726c6965",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > quit subidentity events 1`] = `
[
  {
    "data": {
      "deposit": "(rounded 2000000000)",
      "main": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "sub": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "SubIdentityRevoked",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > remove subidentity events 1`] = `
[
  {
    "data": {
      "deposit": "(rounded 2000000000)",
      "main": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "sub": "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
    },
    "method": "SubIdentityRemoved",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > rename subidentity events 1`] = `
[
  {
    "data": {
      "main": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "sub": "14Gjs1TD93gnwEBfDMHoCgsuf1s2TVKUP6Z1qKmAZnZ8cW5q",
    },
    "method": "SubIdentityRenamed",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > set subidentities events 1`] = `
[
  {
    "data": {
      "main": "15oF4uVJwmo4TdGW7VfQxNLavjCXviqxT9S1MgbjMNHr6Sp5",
      "newDeposit": "(rounded 4000000000)",
      "numberOfSubs": 2,
    },
    "method": "SubIdentitiesSet",
    "section": "identity",
  },
]
`;

exports[`Polkadot People > setting on-chain identity, adding sub-identities, removing one, and having another remove itself should work > subidentity data after 1st subid removal 1`] = `
[
  2005300000,
  [
    "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
  ],
]
`;

exports[`Polkadot People > setting on-chain identity, requesting judgement, cancelling the request and then clearing the identity should work > set identity events 1`] = `
[
  {
    "data": {
      "who": "14E5nqKAp3oAJcmzgZhUD2RcptBeUBScxKHgJKU4HPNcKVf3",
    },
    "method": "IdentitySet",
    "section": "identity",
  },
]
`;
